fixed description overflow

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -481,7 +481,7 @@ body {
         color: black;
         margin-top: -22rem;
         margin-bottom: 3rem;
-        line-height: 4.5rem;
+       // line-height: 4.5rem;
         font-size: 2rem;
         font-weight: 300;
         position: relative;
